RESOLVED FIXED203012
WheelEventTestMonitor doesn't need to be threadsafe
https://bugs.webkit.org/show_bug.cgi?id=203012
Summary WheelEventTestMonitor doesn't need to be threadsafe
Simon Fraser (smfr)
Reported 2019-10-15 15:50:31 PDT
WheelEventTestMonitor doesn't need to be threadsafe
Attachments
Patch (4.71 KB, patch)
2019-10-15 15:51 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2019-10-15 15:51:13 PDT
WebKit Commit Bot
Comment 2 2019-10-15 18:04:48 PDT
Comment on attachment 381035 [details] Patch Clearing flags on attachment: 381035 Committed r251172: <https://trac.webkit.org/changeset/251172>
WebKit Commit Bot
Comment 3 2019-10-15 18:04:50 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-10-15 18:05:20 PDT
Note You need to log in before you can comment on or make changes to this bug.