Source/WebCore/page/WheelEventTestMonitor.cpp
@@ -46,7 +46,7 @@ WheelEventTestMonitor::WheelEventTestMonitor()
 
 void WheelEventTestMonitor::clearAllTestDeferrals()
 {
-    std::lock_guard<Lock> lock(m_reasonsLock);
+    ASSERT(isMainThread());
     m_deferCompletionReasons.clear();
     m_completionCallback = nullptr;
     m_testForCompletionTimer.stop();
@@ -55,10 +55,8 @@ void WheelEventTestMonitor::clearAllTestDeferrals()
 
 void WheelEventTestMonitor::setTestCallbackAndStartNotificationTimer(WTF::Function<void()>&& functionCallback)
 {
-    {
-        std::lock_guard<Lock> lock(m_reasonsLock);
-        m_completionCallback = WTFMove(functionCallback);
-    }
+    ASSERT(isMainThread());
+    m_completionCallback = WTFMove(functionCallback);
     
     if (!m_testForCompletionTimer.isActive())
         m_testForCompletionTimer.startRepeating(1_s / 60.);
@@ -66,7 +64,7 @@ void WheelEventTestMonitor::setTestCallbackAndStartNotificationTimer(WTF::Functi
 
 void WheelEventTestMonitor::deferForReason(ScrollableAreaIdentifier identifier, DeferReason reason)
 {
-    std::lock_guard<Lock> lock(m_reasonsLock);
+    ASSERT(isMainThread());
     m_deferCompletionReasons.ensure(identifier, [] {
         return OptionSet<DeferReason>();
     }).iterator->value.add(reason);
@@ -76,7 +74,7 @@ void WheelEventTestMonitor::deferForReason(ScrollableAreaIdentifier identifier, 
 
 void WheelEventTestMonitor::removeDeferralForReason(ScrollableAreaIdentifier identifier, DeferReason reason)
 {
-    std::lock_guard<Lock> lock(m_reasonsLock);
+    ASSERT(isMainThread());
     auto it = m_deferCompletionReasons.find(identifier);
     if (it == m_deferCompletionReasons.end())
         return;
@@ -90,18 +88,13 @@ void WheelEventTestMonitor::removeDeferralForReason(ScrollableAreaIdentifier ide
     
 void WheelEventTestMonitor::triggerTestTimerFired()
 {
-    WTF::Function<void()> functionCallback;
-
-    {
-        std::lock_guard<Lock> lock(m_reasonsLock);
-        if (!m_deferCompletionReasons.isEmpty()) {
-            LOG_WITH_STREAM(WheelEventTestMonitor, stream << "  WheelEventTestMonitor::triggerTestTimerFired - scrolling still active, reasons " << m_deferCompletionReasons);
-            return;
-        }
-
-        functionCallback = WTFMove(m_completionCallback);
+    ASSERT(isMainThread());
+    if (!m_deferCompletionReasons.isEmpty()) {
+        LOG_WITH_STREAM(WheelEventTestMonitor, stream << "  WheelEventTestMonitor::triggerTestTimerFired - scrolling still active, reasons " << m_deferCompletionReasons);
+        return;
     }
 
+    auto functionCallback = WTFMove(m_completionCallback);
     m_testForCompletionTimer.stop();
 
     LOG_WITH_STREAM(WheelEventTestMonitor, stream << "  WheelEventTestMonitor::triggerTestTimerFired: scrolling is idle, FIRING TEST");
